--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,4 +19,4 @@ coverage = '4.5.2'
 
 [build-system]
 requires = ['poetry>=0.12']
-build-backend = 'poetry.mansonry.api'
+build-backend = 'poetry.masonry.api'
