--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,11 +11,12 @@ homepage = "https://github.com/ropable/nginx-conf-parser"
 repository = "https://github.com/ropable/nginx-conf-parser"
 
 [tool.poetry.dependencies]
-python = "^3.4 || ^3.5 || ^3.6 || ^3.7 || ^3.8 || ^3.9"
+python = "^3.7 || ^3.8 || ^3.9"
 
 [tool.poetry.dev-dependencies]
 nose = '^1.3'
 coverage = '4.5.2'
+ipython = "^7.23.1"
 
 [build-system]
 requires = [
